Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18294

misleading error message when configuration files are owned by root

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 4.11.0-beta1
    • Qt Creator 4.2.0, Qt Creator 4.2.2
    • None
    • ubuntu 16.04.2 x86_64
      first loaded qt stuff via synaptic followed up with upgrades via the network installer.
      All projects are simple C++ static libs or console applications, no QT components used in the code.
    • b7a96a9342adfdb65469c0f132af54aaeebfef01

    Description

      The issue should be reduced to "misleading error message when configuration files are owned by root, reported as ""No .user settings file created by this instance of Qt Creator was found". instead of "permission denied accessing file ~/QtProject/QtCreator.ini". 

       

      Original report was:

      .pro.user files are always get "No .user settings file created by this instance of Qt Creator was found".
      A diff of the <project>.pro.user.<digest> files created with each restart of qtcreator shows that the in-file time stamp is being used as part of the version identification, the human readable version + timestamp and the digest that shortly follows it are the only differences.

      This happens with all my projects starting with qtcreator 4.2.

      The complete projects are in github public repos 980f/safely/cppext ..system ..posix as well as in some private repos.
      I suppose there are some qt configuration files outside the repo that might be affecting this issue, if someone can give me a list I will add copies of mine to this report

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            andyh Andy Heilveil
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes