ProjectExplorer: Give some possible reasons for not using a .user file

In particular, explain that using a different settings path prevents Qt
Creator from using the .user file.

Task-number: QTCREATORBUG-18294
Change-Id: Iabd4bc0f3819ce458a4777d2cd554d1afe6013c6
Reviewed-by: Christian Stenger <christian.stenger@qt.io>